--- a/index.html
+++ b/index.html
@@ -177,6 +177,8 @@ Error message and password prompt
 
 <li>$:/SiteTitle</li>
 
+<li>$:/state/Excise/--1829443684/tagnew</li>
+
 <li>$:/state/Excise/-1396623470/tagnew</li>
 
 <li>$:/state/sidebar</li>
@@ -412,6 +414,8 @@ Error message and password prompt
 <li>Separation Axioms</li>
 
 <li>Similarity Measures</li>
+
+<li>Simulation-Based Search</li>
 
 <li>Slow Cooker Chicken Curry</li>
 
@@ -9955,10 +9959,13 @@ Error message and password prompt
 <div created="20191119201741688" modified="20191119201751499" title="$:/SiteTitle" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Sid's ~TiddlyWiki</pre>
 </div>
+<div created="20200224065746857" modified="20200224065746857" title="$:/state/Excise/--1829443684/tagnew" revision="1" bag="default">
+<pre>yes</pre>
+</div>
 <div created="20200224023332434" modified="20200224023332434" title="$:/state/Excise/-1396623470/tagnew" revision="1" bag="default">
 <pre>yes</pre>
 </div>
-<div created="20200224053540839" modified="20200224060537451" title="$:/state/sidebar" revision="2" bag="default">
+<div created="20200224053540839" modified="20200224065815851" title="$:/state/sidebar" revision="4" bag="default">
 <pre>yes</pre>
 </div>
 <div created="20200224023240551" modified="20200224023240551" title="$:/state/tab/sidebar--595412856" revision="1" bag="default">
@@ -9976,7 +9983,7 @@ Error message and password prompt
 <div title="$:/status/UserName" revision="1" bag="default">
 <pre></pre>
 </div>
-<div created="20200224023216414" list="[[Integrating Learning and Planning]] Welcome [[How to Contribute?]]" modified="20200224023216414" title="$:/StoryList" revision="19" bag="default">
+<div created="20200224023216414" list="[[Integrating Learning and Planning]] Welcome [[How to Contribute?]]" modified="20200224023216414" title="$:/StoryList" revision="21" bag="default">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json" revision="0" bag="default">
@@ -11395,7 +11402,7 @@ tbd
 <div created="20200223045219447" modified="20200223045219447" title="Draft of 'Finite Difference Policy Gradient'" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre></pre>
 </div>
-<div modified="20200224055953366" title="Draft of 'Integrating Learning and Planning'" revision="2677" bag="default">
+<div created="20200224055954562" modified="20200224055954562" title="Draft of 'Integrating Learning and Planning'" type="text/vnd.tiddlywiki" revision="2678" bag="default">
 <pre></pre>
 </div>
 <div created="20200210185952238" modified="20200210185952238" title="Draft of 'Regularization and Overfitting'" type="text/vnd.tiddlywiki" revision="0" bag="default">
@@ -11954,7 +11961,7 @@ Possible if you get reward before terminating that Dyna-Q could help even in jus
 
 Dyna-Q with an Inaccurate Model: need to make sure we continue to explore (put bonus on states never seen before or seen for a while) - struggle for a bit when environment 'changes' cause you struggle with it - https://imgur.com/xoiREJe, https://imgur.com/K53y2VE</pre>
 </div>
-<div created="20200223202242009" modified="20200224060533594" tags="[[reinforcement learning]]" title="Integrating Learning and Planning" type="text/vnd.tiddlywiki" revision="8" bag="default">
+<div created="20200223202242009" modified="20200224065813841" tags="[[reinforcement learning]]" title="Integrating Learning and Planning" type="text/vnd.tiddlywiki" revision="9" bag="default">
 <pre>Model-Based RL:
 
 * [[Policy Gradient Methods]] - learn policy directly from experience
@@ -11978,32 +11985,7 @@ __[[Integrated Architectures of Model-Based RL and Model-Free RL]]__
 
 __[[Simulation-Based Search]]__
 
-Forward Search (instead of randomly sampling state actions from experience rather focus on stuff likely to happen next i.e. what happens now? $$S_t$$) - https://imgur.com/X7KPCaS
-
-* select best action by lookahead
-* build a search tree with current state $$s_t$$ at root
-* can solve just the sub-MDP starting from now
-
-Simulation-Based Search - forward search paradigm using sample-based planning i.e. simulate episodes of experience from now with model (from now to termination) and apply model-free RL to the simulated episodes
-
-* simulate episodes of experience from ''now'' with the model
-* $$\{s^k_t, A^k_t, R^k_{t + 1}, ..., S^k_T\}^K_{k = 1} \sim M$$ i.e. K episodes in total sampled from our model
-* Can use any model-free RL algorithm and learn from this
-
-Simple Monte-Carlo Search:
-
-* Given a model M and a simulation policy $$\pi$$
-* Simulate K episodes from current state
-* Evaluate state actions by mean return (gives us the true value function by law of large numbers) - but only looking at actions from root node
-* select current (real) action with maximum value 
-
-Monte-Carlo Tree Search (Evaluation) - SOTA in 2015 - used in Alpha Go (maybe??)
-
-* Given a model $$M_v$$, simulate K episodes and simulation policy $$\pi$$
-* Build a search tree for ''all'' states and actions
-* Evaluate value function at state-action pair by mean return of episodes from (s, a)
-* after search is finished, select current (real) action (from current state) w max value in search tree
-</pre>
+{{Simulation-Based Search}}</pre>
 </div>
 <div created="20200211210217680" modified="20200222063802153" tags="[[reinforcement learning]]" title="Introduction to Reinforcement Learning" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>__[[About Reinforcement Learning]]__
@@ -13566,6 +13548,82 @@ Measures of  (approximate) Structural Equivalence:
 * Simple measure - count # of common neighbors $$\sum_k A_{ik}A_{jk}$$ - however, lacks information as raw number doesn't tell us if it's a lot or little
 * Cosine Similarity: $$\sigma_{ij} = cos \theta = \frac{\sum_k A_{ik}A_{jk}} {\sqrt{\sum_k A_{ik}^2} \cdot \sqrt{\sum_k A_{jk}^2}}$$ - assuming graph is unweighted simple graph this simplifies to $$n_{ij} / \sqrt{k_i k_j}$$ where $$n_{ij}$$ is the number of common neighbors - technically undefined if either node has degree 0 but just set it to 0
 * Jacard Coeefficient - common neighbors / total num of neighbors (with no double counting) - $$J_{ij} = \frac{n_{ij}}{k_i + k_j - n_{ij}}$$ when i and j have no neighbors in common we get 0 and if all neighbors are common we get 1</pre>
+</div>
+<div created="20200224065750120" modified="20200224065750120" tags="[[Integrating Learning and Planning]]" title="Simulation-Based Search" revision="1" bag="default">
+<pre>Forward Search (instead of randomly sampling state actions from experience rather focus on stuff likely to happen next i.e. what happens now? $$S_t$$) - https://imgur.com/X7KPCaS
+
+* select best action by lookahead
+* build a search tree with current state $$s_t$$ at root
+* can solve just the sub-MDP starting from now
+
+Simulation-Based Search - forward search paradigm using sample-based planning i.e. simulate episodes of experience from now with model (from now to termination) and apply model-free RL to the simulated episodes
+
+* simulate episodes of experience from ''now'' with the model
+* $$\{s^k_t, A^k_t, R^k_{t + 1}, ..., S^k_T\}^K_{k = 1} \sim M$$ i.e. K episodes in total sampled from our model
+* Can use any model-free RL algorithm and learn from this
+
+Simple Monte-Carlo Search:
+
+* Given a model M and a simulation policy $$\pi$$
+* Simulate K episodes from current state
+* Evaluate state actions by mean return (gives us the true value function by law of large numbers) - but only looking at actions from root node
+* select current (real) action with maximum value 
+
+Monte-Carlo Tree Search (Evaluation) - SOTA in 2015 
+
+* Given a model $$M_v$$, simulate K episodes and simulation policy $$\pi$$
+* Build a search tree for ''all'' states and actions
+* Evaluate value function at state-action pair by mean return of episodes from (s, a)
+* after search is finished, select current (real) action (from current state) w max value in search tree
+
+Monte-Carlo Tree Search (Simulation) - Monte-Carlo Control applied to simulated experience - improve simulation policy
+
+* Each simulation consists of two phases (in-tree, out-of-tree) - Tree policy (improves) - picks actions to maximize Q(S, A), Default policy (fixed) - picks actions randomly
+* Repeat (each simulation) - evaluate states by Monte-Carlo evaluation and improve tree policy by e.g. epsion-greedy
+* Converges on the optimal search tree (given this model)
+
+Case Study: 
+
+* The Game of Go - oldest game in the world - hardest of classic board games - traditional game-tree search failed in GO
+* Rules of Go - black and white place down stones alternatively, surrounded stones are captured and removed, player with more territory wins the game
+
+Position Evaluation in Go - how good is a position s
+
+* Reward function (un-discounted) - 0 if non-terminal step, 1 if Black wins for terminal and 0 if White wins for terminal
+* Policy $$\pi = &lt;\pi_B, \pi_W&gt;$$ - selects moves for both players
+* Value function (how good is position s): $$v_\pi(s) = E_\pi[R_T | S = s] = P[Black wins | S = s]$$ and $$v_*(s) = max_{\pi_B} min_{\pi_W} v_\pi(s)$$ - best way to play if opponent tries to minimize your reward as you try to maximize it
+
+Simple Monte-Carlo Tree Search in Go or Monte-Carlo Evaluation in Go: https://imgur.com/PfDCU79
+
+Applying Monte-Carlo Tree Search: https://imgur.com/SPGXnb2, https://imgur.com/DqhsIDA, https://imgur.com/wV5O4xD, https://imgur.com/6LfKDtG, https://imgur.com/eNiTsrm
+
+In practice, it does matter what default policy is but uniform random does pretty well too. And this converges to optimal value (w respect to our model)
+
+Advantages of MC Tree Search:
+
+* Highly selective best-first search - explore more promising parts of tree first
+* Evaluates states dynamically (unlike DP)
+* Uses sampling to break curse of dimensionality and helps it work for blackbox models too
+* Computationally efficient, anytime - runs of model, parallelizable
+
+Temporal-Difference Search:
+
+* Simulation-based search with TD - bootstrapping particularly useful when you can arrive at the same state in many different ways
+* Apply Sarsa to sub-MDP
+
+Why should we do this - bootstrapping is also helpful in simulation-based search
+
+* reduces variance but increases bias
+* usually more efficient than MC
+* TD($$\lambda$$) can be much more efficient than MC search
+
+Dyna-2 - agent stores two sets of feature weights (agent stores two sets of feature weights)
+
+* Long-term memory is updated from real-experience using TD learning - general domain knowledge that applies to any episode
+* Short-term (working) memory is updated from simulated experience using TD search - specific local knowledge about the current situation
+* Overall value function is sum of long and short term memories
+
+Results of TD Search in Go: UCT = Monte-Carlo Tree Search, https://imgur.com/nK0WAws</pre>
 </div>
 <div author="Siddharth Joshi" created="20191119181730637" modified="20191119182440762" tags="recipe" title="Slow Cooker Chicken Curry" type="text/plain" revision="0" bag="default">
 <pre>Ingredients:
