Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -181,7 +181,11 @@ Error message and password prompt
 
 <li>$:/state/Excise/-1396623470/tagnew</li>
 
+<li>$:/state/Excise/-972264986/tagnew</li>
+
 <li>$:/state/sidebar</li>
+
+<li>$:/state/tab/moresidebar-1850697562</li>
 
 <li>$:/state/tab/sidebar--595412856</li>
 
@@ -261,17 +265,15 @@ Error message and password prompt
 
 <li>Do Calculus</li>
 
-<li>Draft of 'Finite Difference Policy Gradient'</li>
-
 <li>Draft of 'Integrating Learning and Planning'</li>
-
-<li>Draft of 'Regularization and Overfitting'</li>
 
 <li>Equivalence Relations</li>
 
 <li>Explainability of Model</li>
 
 <li>Explainable AI: Making Visual Question Answering Systems More Transparent by Raymond J. Mooney</li>
+
+<li>Exploration and Exploitation</li>
 
 <li>Extensions to Dynamic Programming (in RL context)</li>
 
@@ -370,6 +372,8 @@ Error message and password prompt
 <li>Open and Closed Sets</li>
 
 <li>Overfitting</li>
+
+<li>Overview of Exploration v/s Exploitation</li>
 
 <li>Overview of Machine Learning</li>
 
@@ -9965,11 +9969,17 @@ Error message and password prompt
 <div created="20200224023332434" modified="20200224023332434" title="$:/state/Excise/-1396623470/tagnew" revision="1" bag="default">
 <pre>yes</pre>
 </div>
-<div created="20200224053540839" modified="20200224065815851" title="$:/state/sidebar" revision="4" bag="default">
+<div created="20200224072212813" modified="20200224072212813" title="$:/state/Excise/-972264986/tagnew" revision="1" bag="default">
 <pre>yes</pre>
 </div>
-<div created="20200224023240551" modified="20200224023240551" title="$:/state/tab/sidebar--595412856" revision="1" bag="default">
-<pre>$:/core/ui/SideBar/Tools</pre>
+<div created="20200224053540839" modified="20200224072446573" title="$:/state/sidebar" revision="8" bag="default">
+<pre>yes</pre>
+</div>
+<div created="20200224072516466" modified="20200224072613612" title="$:/state/tab/moresidebar-1850697562" revision="9" bag="default">
+<pre>$:/core/ui/MoreSideBar/Orphans</pre>
+</div>
+<div created="20200224023240551" modified="20200224072512712" title="$:/state/tab/sidebar--595412856" revision="3" bag="default">
+<pre>$:/core/ui/SideBar/More</pre>
 </div>
 <div title="$:/status/IsAnonymous" revision="1" bag="default">
 <pre>yes</pre>
@@ -9983,7 +9993,7 @@ Error message and password prompt
 <div title="$:/status/UserName" revision="1" bag="default">
 <pre></pre>
 </div>
-<div created="20200224023216414" list="[[Integrating Learning and Planning]] Welcome [[How to Contribute?]]" modified="20200224023216414" title="$:/StoryList" revision="21" bag="default">
+<div created="20200224023216414" list="" modified="20200224072617749" title="$:/StoryList" revision="49" bag="default">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json" revision="0" bag="default">
@@ -10044,7 +10054,7 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20200224023214748" modified="20200224060540178" title="$:/temp/search" revision="7" bag="default">
+<div created="20200224023214748" modified="20200224072633922" title="$:/temp/search" revision="19" bag="default">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.21" revision="0" bag="default">
@@ -11399,13 +11409,7 @@ tbd
 <div author="" created="20191124064904814" modified="20191124064949779" tags="research probability math" title="Do Calculus" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>https://arxiv.org/pdf/1305.5506.pdf</pre>
 </div>
-<div created="20200223045219447" modified="20200223045219447" title="Draft of 'Finite Difference Policy Gradient'" type="text/vnd.tiddlywiki" revision="0" bag="default">
-<pre></pre>
-</div>
-<div created="20200224055954562" modified="20200224055954562" title="Draft of 'Integrating Learning and Planning'" type="text/vnd.tiddlywiki" revision="2678" bag="default">
-<pre></pre>
-</div>
-<div created="20200210185952238" modified="20200210185952238" title="Draft of 'Regularization and Overfitting'" type="text/vnd.tiddlywiki" revision="0" bag="default">
+<div created="20200224055954562" modified="20200224055954562" title="Draft of 'Integrating Learning and Planning'" type="text/vnd.tiddlywiki" revision="2680" bag="default">
 <pre></pre>
 </div>
 <div created="20191227170002568" modified="20191227170613995" tags="[[real analysis]] math [[discrete math]]" title="Equivalence Relations" type="text/vnd.tiddlywiki" revision="0" bag="default">
@@ -11427,6 +11431,13 @@ e.g. [[Neural Networks]], [[Ensemble Models]] are hard to explain but very accur
 </div>
 <div created="20200131001053606" modified="20200131002052629" tags="xai [[artificial intelligence]] [[talk summary]]" title="Explainable AI: Making Visual Question Answering Systems More Transparent by Raymond J. Mooney" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>https://www.cal.cs.ucla.edu/cgi-bin/webevent.cgi?cmd=showevent&amp;ncmd=calmonth&amp;cal=cal2&amp;id=1578079202-22878-1&amp;ncals=&amp;y=2020&amp;m=01&amp;d=14&amp;token=&amp;sb=0&amp;cf=cal&amp;lc=calmonth&amp;swe=1&amp;set=1&amp;sa=0&amp;sort=e,m,t&amp;ws=0&amp;sib=1&amp;de=1&amp;tf=0</pre>
+</div>
+<div created="20200224070942655" modified="20200224072226943" tags="[[reinforcement learning]]" title="Exploration and Exploitation" revision="3" bag="default">
+<pre>__[[Overview of Exploration v/s Exploitation]]__
+
+{{Overview of Exploration v/s Exploitation}}
+
+</pre>
 </div>
 <div created="20200214205649421" modified="20200214210303147" tags="[[reinforcement learning]] [[Planning by Dynamic Programming]]" title="Extensions to Dynamic Programming (in RL context)" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Asynchronous Dynamic Programming - back up states individually, for each selected state, apply the appropriate backup, can significantly reduce computation - guaranteed to converge if for all states continue to be selected
@@ -12837,6 +12848,41 @@ Cross Validation - no reason to choose one particular split of the data:
 
 Visualizing Overfitting - learning curves - show performance v/s number of training instances - https://imgur.com/q8QFr8Z - shows that with less data overfits more, generalizes badly - eventually generalizes better but performs worse on training data but better on testing</pre>
 </div>
+<div created="20200224072215356" modified="20200224072215356" tags="[[Exploration and Exploitation]]" title="Overview of Exploration v/s Exploitation" revision="1" bag="default">
+<pre>Online Decision Making involves a fundamental choice:
+
+* Exploitation - make the best decision given current information
+* Exploration - gather more information (by giving up current reward)
+* The best long-term strategy might involve short-term sacrifices
+
+Examples:
+
+* Restaurant Selection - favorite restaurant v/s new restaurant
+* Online Banner Advertisements - most successful advert v/s new advert
+* Oil Drilling - drill at best known location v/s drill at new location
+
+Approaches to Exploration:
+
+* Random Exploration - explore random actions ($$\epsilon$$-greedy, softmax)
+* Optimism in the face of uncertainty - estimate uncertainty on value, prefer to explore states/actions with higher uncertainty
+* Information state space (most theoretically rigorous, but computationally very expensive) - consider agent's information as part of its state (state is entire history), lookahead to see how information helps reward
+
+State Exploration v/s Parameter Exploration (more like global optimization in parameter space):
+
+* Systematically explore state space / action space
+* Pick different parameters and try for a while - advantage is that gives us the consistent exploration, disadvantage - doesn't know about state / action space
+
+(This lecture focuses on State Exploration)
+
+Principles:
+
+* Naive Exploration - add noise to greedy policy
+* Optimistic Initialization - assume best until proven otherwise
+* Optimism in the Face of Uncertainty - prefer actions with uncertain values
+* Probability Matching - select actions according to probability they are best
+* Information State Search - lookahead search incorporating value of information
+</pre>
+</div>
 <div created="20200126032442520" modified="20200126035121411" tags="[[machine learning]]" title="Overview of Machine Learning" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Machine Learning - study of algorithms that improve their performance P, at some task T with experience E. Well-defined ML task given by &lt;P, T, E&gt;
 
@@ -13408,7 +13454,7 @@ reduction step 2 - stochastic gradient langevin dynamics (SGLD) - instead of lea
 implementable in entropic mirror descent - hsieh et al 2019
 </pre>
 </div>
-<div author="Siddharth Joshi" created="20191125022514242" modified="20200223205601792" tags="[[online course]] [[reinforcement learning]] [[machine learning]]" title="Reinforcement Learning: David Silver Course" type="text/vnd.tiddlywiki" revision="0" bag="default">
+<div author="Siddharth Joshi" created="20191125022514242" modified="20200224070804351" tags="[[online course]] [[reinforcement learning]] [[machine learning]]" title="Reinforcement Learning: David Silver Course" type="text/vnd.tiddlywiki" revision="1" bag="default">
 <pre>Part 1: Elementary Reinforcement Learning
 
 # [[Introduction to Reinforcement Learning]]
@@ -13422,6 +13468,7 @@ Part 2: Reinforcement Learning in Practice
 # [[Value Function Approximation]]
 # [[Policy Gradient Methods]]
 # [[Integrating Learning and Planning]]
+# [[Exploration and Exploitation]]
 
 Link to videos: https://www.youtube.com/watch?v=2pWv7GOvuf0&amp;list=PLzuuYNsE1EZAXYR4FJ75jcJseBmo4KQ9-&amp;fbclid=IwAR0lD-SDq5vtgIlUwb4IQryt6USHNndwB2eI0j7cpyfsPkeESv4Rok5YGhY
 
