--- a/index.html
+++ b/index.html
@@ -177,17 +177,7 @@ Error message and password prompt
 
 <li>$:/SiteTitle</li>
 
-<li>$:/state/Excise/--1829443684/tagnew</li>
-
-<li>$:/state/Excise/-1396623470/tagnew</li>
-
-<li>$:/state/Excise/-972264986/tagnew</li>
-
 <li>$:/state/sidebar</li>
-
-<li>$:/state/tab/moresidebar-1850697562</li>
-
-<li>$:/state/tab/sidebar--595412856</li>
 
 <li>$:/status/IsAnonymous</li>
 
@@ -434,6 +424,8 @@ Error message and password prompt
 <li>Temporal-Difference Learning</li>
 
 <li>The Hundred-Page Machine Learning Book by Andriy Burkov</li>
+
+<li>The Processor (Pipelining)</li>
 
 <li>The Processor (Single Cycle Data Paths)</li>
 
@@ -9963,23 +9955,8 @@ Error message and password prompt
 <div created="20191119201741688" modified="20191119201751499" title="$:/SiteTitle" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Sid's ~TiddlyWiki</pre>
 </div>
-<div created="20200224065746857" modified="20200224065746857" title="$:/state/Excise/--1829443684/tagnew" revision="1" bag="default">
+<div created="20200225061800118" modified="20200225062250349" title="$:/state/sidebar" revision="2" bag="default">
 <pre>yes</pre>
-</div>
-<div created="20200224023332434" modified="20200224023332434" title="$:/state/Excise/-1396623470/tagnew" revision="1" bag="default">
-<pre>yes</pre>
-</div>
-<div created="20200224072212813" modified="20200224072212813" title="$:/state/Excise/-972264986/tagnew" revision="1" bag="default">
-<pre>yes</pre>
-</div>
-<div created="20200224053540839" modified="20200224072446573" title="$:/state/sidebar" revision="8" bag="default">
-<pre>yes</pre>
-</div>
-<div created="20200224072516466" modified="20200224072613612" title="$:/state/tab/moresidebar-1850697562" revision="9" bag="default">
-<pre>$:/core/ui/MoreSideBar/Orphans</pre>
-</div>
-<div created="20200224023240551" modified="20200224072512712" title="$:/state/tab/sidebar--595412856" revision="3" bag="default">
-<pre>$:/core/ui/SideBar/More</pre>
 </div>
 <div title="$:/status/IsAnonymous" revision="1" bag="default">
 <pre>yes</pre>
@@ -9993,7 +9970,7 @@ Error message and password prompt
 <div title="$:/status/UserName" revision="1" bag="default">
 <pre></pre>
 </div>
-<div created="20200224023216414" list="" modified="20200224072617749" title="$:/StoryList" revision="49" bag="default">
+<div created="20200225052703779" list="[[UCLA CS M151B - Computer Architecture]] [[The Processor (Pipelining)]]" modified="20200225053647842" title="$:/StoryList" revision="23" bag="default">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json" revision="0" bag="default">
@@ -10041,11 +10018,11 @@ Error message and password prompt
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
-            &quot;text&quot;: &quot;1440&quot;
+            &quot;text&quot;: &quot;1920&quot;
         },
         &quot;$:/info/browser/screen/height&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/height&quot;,
-            &quot;text&quot;: &quot;900&quot;
+            &quot;text&quot;: &quot;1080&quot;
         },
         &quot;$:/info/browser/language&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/language&quot;,
@@ -10054,7 +10031,7 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20200224023214748" modified="20200224072633922" title="$:/temp/search" revision="19" bag="default">
+<div created="20200225052654444" modified="20200225052706247" title="$:/temp/search" revision="35" bag="default">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.21" revision="0" bag="default">
@@ -11409,7 +11386,7 @@ tbd
 <div author="" created="20191124064904814" modified="20191124064949779" tags="research probability math" title="Do Calculus" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>https://arxiv.org/pdf/1305.5506.pdf</pre>
 </div>
-<div created="20200224055954562" modified="20200224055954562" title="Draft of 'Integrating Learning and Planning'" type="text/vnd.tiddlywiki" revision="2680" bag="default">
+<div created="20200224055954562" modified="20200224055954562" title="Draft of 'Integrating Learning and Planning'" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre></pre>
 </div>
 <div created="20191227170002568" modified="20191227170613995" tags="[[real analysis]] math [[discrete math]]" title="Equivalence Relations" type="text/vnd.tiddlywiki" revision="0" bag="default">
@@ -11432,7 +11409,7 @@ e.g. [[Neural Networks]], [[Ensemble Models]] are hard to explain but very accur
 <div created="20200131001053606" modified="20200131002052629" tags="xai [[artificial intelligence]] [[talk summary]]" title="Explainable AI: Making Visual Question Answering Systems More Transparent by Raymond J. Mooney" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>https://www.cal.cs.ucla.edu/cgi-bin/webevent.cgi?cmd=showevent&amp;ncmd=calmonth&amp;cal=cal2&amp;id=1578079202-22878-1&amp;ncals=&amp;y=2020&amp;m=01&amp;d=14&amp;token=&amp;sb=0&amp;cf=cal&amp;lc=calmonth&amp;swe=1&amp;set=1&amp;sa=0&amp;sort=e,m,t&amp;ws=0&amp;sib=1&amp;de=1&amp;tf=0</pre>
 </div>
-<div created="20200224070942655" modified="20200224072226943" tags="[[reinforcement learning]]" title="Exploration and Exploitation" revision="3" bag="default">
+<div created="20200224070942655" modified="20200224072228016" tags="[[reinforcement learning]]" title="Exploration and Exploitation" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>__[[Overview of Exploration v/s Exploitation]]__
 
 {{Overview of Exploration v/s Exploitation}}
@@ -11952,7 +11929,7 @@ Branching Far Away:
 <pre>Axiomatic Definition:
 </pre>
 </div>
-<div created="20200224053557372" modified="20200224053557372" tags="[[Integrating Learning and Planning]]" title="Integrated Architectures of Model-Based RL and Model-Free RL" revision="1" bag="default">
+<div created="20200224053557372" modified="20200224053558476" tags="[[Integrating Learning and Planning]]" title="Integrated Architectures of Model-Based RL and Model-Free RL" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Two sources of experience: 
 
 * Real Experience: Sampled from Environment (true MDP)
@@ -11972,7 +11949,7 @@ Possible if you get reward before terminating that Dyna-Q could help even in jus
 
 Dyna-Q with an Inaccurate Model: need to make sure we continue to explore (put bonus on states never seen before or seen for a while) - struggle for a bit when environment 'changes' cause you struggle with it - https://imgur.com/xoiREJe, https://imgur.com/K53y2VE</pre>
 </div>
-<div created="20200223202242009" modified="20200224065813841" tags="[[reinforcement learning]]" title="Integrating Learning and Planning" type="text/vnd.tiddlywiki" revision="9" bag="default">
+<div created="20200223202242009" modified="20200224065815073" tags="[[reinforcement learning]]" title="Integrating Learning and Planning" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Model-Based RL:
 
 * [[Policy Gradient Methods]] - learn policy directly from experience
@@ -12387,7 +12364,7 @@ Bellman equation can be expressed concisely using matrices: https://imgur.com/n1
 <div author="Siddharth Joshi" created="20191126064803358" modified="20191126072901553" tags="incomplete philosophy logic" title="Model Theory" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>https://plato.stanford.edu/entries/model-theory/</pre>
 </div>
-<div created="20200224023338022" modified="20200224023338022" tags="[[Integrating Learning and Planning]]" title="Model-Based Reinforcement Learning" revision="1" bag="default">
+<div created="20200224023338022" modified="20200224023339125" tags="[[Integrating Learning and Planning]]" title="Model-Based Reinforcement Learning" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>https://imgur.com/fcyASWH - learn model, plan, act, evaluate policy and evaluate policy &amp; improve model
 
 Advantages of Model-Based RL:
@@ -12848,7 +12825,7 @@ Cross Validation - no reason to choose one particular split of the data:
 
 Visualizing Overfitting - learning curves - show performance v/s number of training instances - https://imgur.com/q8QFr8Z - shows that with less data overfits more, generalizes badly - eventually generalizes better but performs worse on training data but better on testing</pre>
 </div>
-<div created="20200224072215356" modified="20200224072215356" tags="[[Exploration and Exploitation]]" title="Overview of Exploration v/s Exploitation" revision="1" bag="default">
+<div created="20200224072215356" modified="20200224072216434" tags="[[Exploration and Exploitation]]" title="Overview of Exploration v/s Exploitation" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Online Decision Making involves a fundamental choice:
 
 * Exploitation - make the best decision given current information
@@ -13454,7 +13431,7 @@ reduction step 2 - stochastic gradient langevin dynamics (SGLD) - instead of lea
 implementable in entropic mirror descent - hsieh et al 2019
 </pre>
 </div>
-<div author="Siddharth Joshi" created="20191125022514242" modified="20200224070804351" tags="[[online course]] [[reinforcement learning]] [[machine learning]]" title="Reinforcement Learning: David Silver Course" type="text/vnd.tiddlywiki" revision="1" bag="default">
+<div author="Siddharth Joshi" created="20191125022514242" modified="20200224070805441" tags="[[online course]] [[reinforcement learning]] [[machine learning]]" title="Reinforcement Learning: David Silver Course" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Part 1: Elementary Reinforcement Learning
 
 # [[Introduction to Reinforcement Learning]]
@@ -13596,7 +13573,7 @@ Measures of  (approximate) Structural Equivalence:
 * Cosine Similarity: $$\sigma_{ij} = cos \theta = \frac{\sum_k A_{ik}A_{jk}} {\sqrt{\sum_k A_{ik}^2} \cdot \sqrt{\sum_k A_{jk}^2}}$$ - assuming graph is unweighted simple graph this simplifies to $$n_{ij} / \sqrt{k_i k_j}$$ where $$n_{ij}$$ is the number of common neighbors - technically undefined if either node has degree 0 but just set it to 0
 * Jacard Coeefficient - common neighbors / total num of neighbors (with no double counting) - $$J_{ij} = \frac{n_{ij}}{k_i + k_j - n_{ij}}$$ when i and j have no neighbors in common we get 0 and if all neighbors are common we get 1</pre>
 </div>
-<div created="20200224065750120" modified="20200224065750120" tags="[[Integrating Learning and Planning]]" title="Simulation-Based Search" revision="1" bag="default">
+<div created="20200224065750120" modified="20200224065751219" tags="[[Integrating Learning and Planning]]" title="Simulation-Based Search" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Forward Search (instead of randomly sampling state actions from experience rather focus on stuff likely to happen next i.e. what happens now? $$S_t$$) - https://imgur.com/X7KPCaS
 
 * select best action by lookahead
@@ -13833,6 +13810,79 @@ This is a chapter by chapter summary of the topics covered in The Hundred-Page M
 * [[Chapter 4 |Chapter 4 (The Hundred-Page Machine Learning Book)]]
 * [[Chapter 5 |Chapter 5 (The Hundred-Page Machine Learning Book)]]</pre>
 </div>
+<div created="20200225052828231" modified="20200225062248363" tags="[[computer architecture]]" title="The Processor (Pipelining)" revision="6" bag="default">
+<pre>__Basics: Idealized View__
+
+Performance Issues - longest delay determines clock period:
+
+* Critical Path - load instruction
+* Instruction memory -&gt; register file -&gt; ALU -&gt; data memory -&gt; register file
+* Make common case fast - load instruction probably not common case
+
+Pipelining: Parallelism overlapping execution - discrete steps that occur that can overlap
+
+MIPS Pipeline (Five Stages): https://imgur.com/MAMJqw8
+
+* IF: Instruction Fetch from Memory
+* ID: Instruction Decode &amp; Register Read
+* EX: Execute Operation or Calculate Address
+* MEM: Access Memory Operand
+* WB: Write Back to Register
+
+Pipeline Performance: goal is to reduce clock cycle time, assumptions regarding time: https://imgur.com/V823mDW
+
+* In Single Cycle: cycle time determined by time of max latency instruction
+* In Pipelined: cycle time determined by time of max stage latency
+
+Pipelined Speedup:
+
+* if all stages are balanced: then Time between pipelined instructions = Time between instructions (non-pipelined) / Number of Stages
+* Speedup due to higher throughput but latency remains the same (time for each instruction)
+
+Mixed Instructions in Pipeline: need to regularize path as we can get clashes when two different instructions are at the same stage at the same time
+
+Pipelining and ISA Design - MIPS ISA designed for pipelining:
+
+* All instructions are 32 bits - each to fetch and decode in 1 cycle
+* Few and regular instruction formats - can decode and read registers in one step
+* Load / Store Addressing - calculate address in stage 3, access in stage 4
+* Alignment of memory operands - memory access only takes 1 cycle
+
+Pipeline Principles:
+
+* All instructions that share a pipeline must have the same stages in the same order - e.g. add does nothing in Mem stage
+* All intermediate values must be 'latched' (stored) each cycle - https://imgur.com/tysrOFb (notice issue with write register value not being propagated)
+* No functional block reuse- can't use the same hardware for 2 different stages
+
+Pipelining - anything you want to use in later stages, needs to be propagated to the later stage for use (latched in every latch until it's no longer needed)
+
+Multi-Cycle Pipeline Diagram: https://imgur.com/Oj8OWl4
+
+Pipelined Control: more than 1 set of control signals at a time (potentially as many as there are stages)
+
+* Zoomed in simple view: https://imgur.com/YbR2w23
+* Full Pipeline Diagram: https://imgur.com/xDhQ9AY
+* Main control unit identical to single cycle but cluster according to stages since we need to save those values together 
+
+__Dealing with Hazards__
+
+Hazards:
+
+* Data Hazard: e.g. add $3, $10, $11 -&gt; lw $8, 50($3) -&gt; sub $11, $8, $7 -&gt; straight-line dependency - each instruction uses the results of the previous instruction - issue is that when lw moves on to execution, register 3 has not been written to with the solution of the add value, subtract executed when address not loaded from yet
+* Structure Hazard - a required resource is busy - what was happening earlier with add and lw before we regularized
+* Control Hazard - deciding on control action depends on previous instruction
+
+Structure Hazards:
+
+* Pipeline Bubble - a gap when there is no instruction injected
+* Pipelined instructions require separate instruction / data memory (or caches at least) - otherwise ID and MEM can't occur together 
+
+Data Hazards - an instruction depends on completion of data access by a previous instruction
+
+* need to keep injecting bubbles to ensure consistency
+* Extent of issue: https://imgur.com/hjJ2kpf
+* Transparent Latches: first half of cycle writes occur, second half of cycle can have reads (this is why add instruction also doesn't have an issue in the above diagram)</pre>
+</div>
 <div created="20200203014758261" modified="20200204231056108" tags="[[computer architecture]]" title="The Processor (Single Cycle Data Paths)" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Two MIPS Implementations:
 
@@ -14037,12 +14087,13 @@ Partially Observable Environments - indirectly observes environment (e.g. poker 
 # [[Regularization and Overfitting]]
 # [[Overview of Supervised Learning]]</pre>
 </div>
-<div created="20200115032001461" modified="20200204223646594" tags="[[computer architecture]] ucla" title="UCLA CS M151B - Computer Architecture" type="text/vnd.tiddlywiki" revision="0" bag="default">
+<div created="20200115032001461" modified="20200225052821112" tags="[[computer architecture]] ucla" title="UCLA CS M151B - Computer Architecture" type="text/vnd.tiddlywiki" revision="2" bag="default">
 <pre>!!! Syllabus
 # [[Computer Abstractions and Technology]]
 # [[Instructions: Language of the Computer]]
 # [[Arithmetic for Computers]]
-# [[The Processor (Single Cycle Data Paths)]]</pre>
+# [[The Processor (Single Cycle Data Paths)]]
+# [[The Processor (Pipelining)]]$$</pre>
 </div>
 <div created="20191121010859851" modified="20191121011220661" tags="" title="UCLA CS M282A - Cryptography 1" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre></pre>
